2017-06-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_global_ctxt.h (naslctxt): Remove maxlen and buffer elements.

	* nasl/nasl_grammar.y (parse_buffer, parse_len): New variables.
	(init_nasl_ctx, nasl_clean_ctx, mylex): Adjust to use parse_buffer and
	parse_len instead of allocating and reallocating a new ctxt buffer each
	time. Improves parsing performance.

2017-06-29  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_add): Set the preference's name to
	Timeout instead of Script timeout.

2017-06-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Remove repetitive filename duplications during parsing. Improves fresh
	load-up time.

	* nasl/nasl_debug.c (nasl_set_filename): New function.
	(nasl_perror): Use value set by new function instead of filename element
	in lex_ctxt.

	* nasl/nasl_debug.h: Add new function prototype.

	* nasl/nasl_global_ctxt.h (lex_ctxt): Remove filename element.

	* nasl/exec.c (nasl_exec, exec_nasl_script): Call nasl_set_filename().

	* nasl/lint.c (nasl_lint_call), nasl/nasl_tree.c (free_tree): Remove
	filename handling.

	* nasl/nasl_tree.h (tree_cell): Remove filename element.

	* nasl/nasl_grammar.y (FNAME): Remove macro.
	(nasllex): Don't duplicate context filename.
	(init_nasl_ctxt): Call nasl_set_filename().
	(nasl_clean_ctxt): Don't free filename.

2017-06-28  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* nasl/nasl_tree.c (allloc_tree_cell): Remove unneeded initializations.
	Remove function parameters.

	* nasl/nasl_tree.h: Adjust function prototype.

	* nasl/exec.c, nasl/nasl_cert.c, nasl/nasl_crypto.c,
	nasl/nasl_crypto2.c, nasl/nasl_grammar.y, nasl/nasl_http.c,
	nasl/nasl_misc_funcs.c, nasl/nasl_packet_forgery.c,
	nasl/nasl_packet_forgery_v6.c, nasl/nasl_scanner_glue.c,
	nasl/nasl_smb.c, nasl/nasl_socket.c, nasl/nasl_text_utils.c,
	nasl/nasl_tree.c, nasl/nasl_var.c, nasl/nasl_wmi.c: Adjust
	alloc_tree_cell() calls accordingly.
